--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,8 +8,11 @@
     <title>Base</title>
 </head>
 <body>
+    {% include "blog/partials/_header.html" %}
     {% block content %}
     
     {% endblock content %}
+    {% include "blog/partials/_pagination.html" %}
+    {% include "blog/partials/_footer.html" %}
 </body>
 </html>
