Usando Context Processors para injetar valores em todos os templates do Django

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     {% include "blog/partials/_header.html" %}
+    {{site_setup}}
     {% block content %}
     
     {% endblock content %}
