--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'blog/css/remedy.css' %}">
-    <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
-    {% if  site_setup.favicon %}
-        <link rel="shortcut icon" href="{{ site_setup.favicon.url }}" type="image/png">
-    {% endif %}
-   
-    <title>Base</title>
+  {% include 'blog/partials/_head.html' %}
 </head>
 <body>
-    {% include "blog/partials/_header.html" %}
-    {{site_setup}}
-    {% block content %}
+  <div class="blog-wrapper">
+    {% include 'blog/partials/_header.html' %}
+
+    {% block content %}{% endblock content %}
     
-    {% endblock content %}
-    {% include "blog/partials/_pagination.html" %}
-    {% include "blog/partials/_footer.html" %}
+    {% include 'blog/partials/_pagination.html' %}
+    
+    {% include 'blog/partials/_footer.html' %}
+  </div>
 </body>
 </html>
