--- a/blog/templates/blog/pages/index.html
+++ b/blog/templates/blog/pages/index.html
@@ -4,13 +4,17 @@
   <main class="main-content section-wrapper">
     <div class="section-content-wide">
       <div class="section-gap">
-
-        <div class="card-grid">
-          {% for post in page_obj %}
-            {% include 'blog/partials/_post-card.html' with i=forloop.counter0 %}
-          {% endfor %}
-        </div>
-
+        {% if page_obj%}
+          <div class="card-grid">
+            {% for post in page_obj %}
+              {% include 'blog/partials/_post-card.html' with i=forloop.counter0 %}
+            {% endfor %}
+          </div>
+          {% else %}
+          <div class="not-found center">
+            <h1>Nada encontrado</h1>
+          </div>
+        {% endif %}
       </div>
     </div>
   </main>
