Renderizando HTML dentro do template do Django com safe

--- a/blog/templates/blog/pages/post.html
+++ b/blog/templates/blog/pages/post.html
@@ -54,13 +54,13 @@
       </div>
 
       <p class="single-post-excerpt pb-base">
-        {{post.content}}
+        {{post.excerpt | safe}}
       </p>
 
       <div class="separator"></div>
 
       <div class="single-post-content">
-      
+        {{post.content | safe}}
       
         <div class="post-tags">
           <span>Tags: </span>
